[package]
name = "rp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "full"] }
hyper = "1.2"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1.1"

urlencoding = "2.1"
once_cell = "1.19"


## used by slb.sh
# chrono = "0.4"
# rand = "0.8"
# ndm = "0.9"


# impl this later myself :p
[build-dependencies]
walkdir = "2.5"
