[package]
name = "rp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foxhole = { git = "https://github.com/Kay-Conte/foxhole-rs" }

urlencoding = "2.1"
once_cell = "1.19"


# used by slb.sh
chrono = "0.4"
rand = "0.8"
ndm = "0.9"
lazy_static = "1.4"


# impl this later myself :p
[build-dependencies]
walkdir = "2.5"
syn = { version = "2.0", features = ["full"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
debug = false
