[package]
name = "rp"
version = "0.1.0"
edition = "2021"

[dependencies]
foxhole = { git = "https://github.com/Kay-Conte/foxhole-rs" }


# impl this later myself :p
[build-dependencies]
walkdir = "2.5"
syn = { version = "2.0", features = ["full"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
debug = false
